Fix right align on creature sheet.

--- a/css/mgt2.css
+++ b/css/mgt2.css
@@ -1028,7 +1028,7 @@ div.item-side-panel {
 }
 
 .character-right {
-    width: auto;
+    width: 100%;
 }
 
 .augment-types {
